removed droping field->query_id for reinitialization tables for subquery. (BUG#2089)